welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
def faireV() (c:Color){setCouleurBrosse
                       ^MethodsPicture:28: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleurBrosse(Color.yellow);faireV();
                                             ^MethodsPicture:30: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
     setCouleurBrosse(Color.red);faireV();gauche();
                                       ^MethodsPicture:31: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
     setCouleurBrosse(Color.blue);faireV();gauche();
                                        ^MethodsPicture:32: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
     setCouleurBrosse(Color.green);faireV();gauche();
                                         ^