welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV() (c:Color){setCouleurBrosse
		
			avance()
			baisseBrosse();
			leveBrosse();
			avance();
			gauche();
			avance();
			baisseBrosse();
			leveBrosse();
			recule();
			droite();
			avance();
			baisseBrosse();
			leveBrosse();
			avance();
			
			
			
	     	
	     	
	     	 
		
	}
	def faireMotif(){
	
     
	setCouleurBrosse(Color.yellow);faireV();
	gauche();
     setCouleurBrosse(Color.red);faireV();gauche();
     setCouleurBrosse(Color.blue);faireV();gauche();
     setCouleurBrosse(Color.green);faireV();gauche();
     }
override def run() {for(x<-1 to 3)
                      {for(x<-1 to 3) { 
	                      faireMotif();avance();avance();avance();avance();avance();
	}

gauche();avance();avance();avance();avance();avance();droite();
}
}
